# SoOC

./: SoOC.ipynb  pyproject.toml
