[tool.poetry]
name = "SoOC"
version = "0.1.0"
description = "Synthesis of optimal controls using PyTorch"
authors = ["Anastasia Kononova <impuling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.18.2"
scipy = "^1.4.1"
pandas = "^1.0.3"
torch = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
